Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24364

Alter rename table does not remove PFS share

    XMLWordPrintable

Details

    Description

      Reproduce

      --source include/have_perfschema.inc
       
      create or replace table yt4 (x int);
      alter table yt4 rename to t1, algorithm=copy;
      drop tables t1;
       
      SELECT object_type, object_schema, object_name
      FROM performance_schema.objects_summary_global_by_type
      WHERE object_schema="test";
      

      Result

      object_type     object_schema   object_name
      TABLE   test    yt4
      

      Expected

      Empty resultset.

      Notes

      10.3, 10.4 look good:

      create or replace table yt4 (x int);
      alter table yt4 rename to t1, algorithm=copy;
      drop tables t1;
      SELECT object_type, object_schema, object_name
      FROM performance_schema.objects_summary_global_by_type
      WHERE object_schema="test";
      object_type     object_schema   object_name
      

      algorithm=inplace on 10.5 looks good:

      create or replace table yt4 (x int) engine innodb;
      alter table yt4 rename to t1, algorithm=inplace;
      drop tables t1;
      SELECT object_type, object_schema, object_name
      FROM performance_schema.objects_summary_global_by_type
      WHERE object_schema="test";
      object_type     object_schema   object_name
      

      Attachments

        Issue Links

          Activity

            People

              midenok Aleksey Midenkov
              midenok Aleksey Midenkov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.