MDEV-24364 Alter rename table does not remove PFS share

Add missed PSI_CALL_drop_table_share().